[tool.poetry]
name = "interview-orbital-materials"
version = "0.1.0"
description = ""
authors = ["Jonathan Rayner <jonathan.j.rayner@gmail.com>"]
readme = "README.md"
packages = [{include = "interview_orbital_materials"}]

[tool.poetry.dependencies]
python = "^3.10"
ase = "^3.22.1"
torch = {version = "^2.0.0+cpu", source = "pytorch-cpu"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
